--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,226 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Navbar CSS */
+.container-fluid{
+    padding: 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar{
+    padding: 0px;
+    margin-bottom: 0px;
+}
+.web-logo{
+    height: 3rem;
+}
+
+.web-logo:hover{
+    filter: brightness(80%);
+    cursor: pointer;
+}
+
+.nav-link{
+    padding: 1.1rem;
+    width: 7.2rem;
+    text-align: center;
+    font-size: smaller;
+    cursor: pointer;
+}
+
+.nav-link:hover{
+    background-color: rgb(44, 109, 231);
+}
+
+.navbar-nav .nav-link.active:hover{
+    color: white;
+}
+
+/* Home Page Css */
+ .homepage-container {
+    position: relative;
+    height: 100vh; 
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .full-width-video {
+    width: 100%;
+    height: 100%; 
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  
+  .centered-text {
+    color: white;
+    font-size: xl-large;
+    max-width: 100%; 
+  }
+  
+  .paragraph{
+    font-size: larger; 
+  }
+
+  .centered-items{
+    max-height: 90%;
+  }
+  
+  .started-btn {
+    background-color: white;
+    color: rgb(44, 109, 231);
+    font-family: Baskerville;
+  }
+  
+  .started-btn:hover {
+    background-color: rgb(44, 109, 231);
+    color: white;
+  }  
+  
+/* Media Querie for Navbar */
+@media (max-width: 991px){
+    .nav-link{
+        padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
+        font-size: var(--bs-nav-link-font-size);
+        width: 100%;
+        text-align: left;
+        padding-left: 5px;
+    }
+}
+
+/* Get Started Css */
+.row{
+    margin-right: 0px;
+}
+.GT-Page{
+    background-color: #EEA47FFF;
+}
+
+.GT-Card{
+    background-color: #00539CFF;
+    border-radius: 2vh;
+}
+
+.GT-img{
+    height: 40vh;
+    width: 40vh;
+}
+
+.GT-Card-Heading{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.GT-btn{
+    background-color: #00539CFF;
+    color: yellow;
+    border: none;
+    font-size: large;
+}
+
+/* Save Marksheet css */
+.save-page{
+    background-color: #EEA47FFF;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height: 100vh;
+}
+
+.save-form{
+    background-color: #00539CFF;
+    height: 60vh;
+    border-radius: 2vh;
+}
+
+.save-marksheet-form{
+    justify-content: space-around;
+    margin-top: 10vh;
+}
+
+.standard-btn{
+    border: 1px white solid;
+    background-color: white;
+    color: #00539CFF;
+    width: 30vh;
+    font-size: larger;
+    height: 45px;
+}
+
+.standard-btn:hover{
+    border: 1px white solid;
+}
+
+.select-marksheet-btn{
+    border: 1px white solid;
+    background-color: white;
+    color: #00539CFF;
+    font-size: larger;
+}
+
+.form-heading {
+    border-bottom: 1px solid white; 
+    color: white;
+}
+
+/* About Page CSS */
+.about-page{
+    background-color: #EEA47FFF;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.about-content{
+    background-color: #00539CFF;
+    border-radius: 2vh;
+
+}
+
+.about-lines{
+    font-size: large;
+}
+
+.feature-heading{
+    font-size: 19px;
+}
+
+/* Login Page */
+.modal-header {
+    border-bottom: 0;
+}
+
+.divider:after,
+.divider:before {
+content: "";
+flex: 1;
+height: 1px;
+background: #eee;
+}
+
+.small{
+    cursor: pointer;
+}
+
+.fgt-pass{
+    cursor: pointer;
+}
+
+.password-show-hide{
+    border-color: #DEE2E6;
+    border-left: none;
+}
+
+.password-input{
+    border-right: none;
+}
+
+/* Term and Condition */
+.back-arrow{
+    color: #212529; 
+    margin-right: 10px;
+    font-size: x-large;
+    border: none;
+    border-radius: 10px; /* Adjust the border radius as needed */
+    transition: box-shadow 0.3s ease;
+}
+
+.back-arrow:hover{
+    cursor: pointer;
 }
