--- a/src/index.css
+++ b/src/index.css
@@ -17,20 +17,44 @@
 }
 
 .nav-link{
-    padding: 1.1rem;
+    padding: 1.5rem;
     width: 7.2rem;
     text-align: center;
-    font-size: smaller;
+    font-size: 16px;
     cursor: pointer;
 }
+
 
 .nav-link:hover{
     background-color: rgb(44, 109, 231);
 }
 
+
 .navbar-nav .nav-link.active:hover{
     color: white;
 }
+
+.nav-item .nav-link {
+    position: relative;
+    text-decoration: none;
+    color: inherit; 
+}
+
+.nav-item .nav-link::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 3px;
+    background: black;
+    left: 10%;
+    bottom: 1rem;
+    transition: width 0.6s ease;
+}
+
+.nav-item .nav-link:hover::after {
+    width: 80%;
+}
+
 
 /* Home Page Css */
  .homepage-container {
@@ -82,11 +106,32 @@
 @media (max-width: 991px){
     .nav-link{
         padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
-        font-size: var(--bs-nav-link-font-size);
+        /* font-size: var(--bs-nav-link-font-size); */
+        font-size: large;
         width: 100%;
         text-align: left;
         padding-left: 5px;
     }
+
+    .nav-link:hover{
+        border-radius: 5px;
+    }
+
+    .nav-item .nav-link::after {
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 3px;
+        background: black;
+        left: 0;
+        bottom: 0.4rem;
+        transition: width 0.9s ease;
+    }
+    
+    .nav-item .nav-link:hover::after {
+        width: 100%;
+    }
+
 }
 
 /* Get Started Css */
