--- a/src/index.css
+++ b/src/index.css
@@ -326,24 +326,43 @@ button:focus{
 }
 
 /* About Page CSS */
-.about-page{
-    background-color: #EEA47FFF;
+.about-section {
+    padding: 60px 0;
+  }
+  
+  .about-section h2 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+  }
+  
+  .about-section p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+  }
+  
+  .about-icons {
+    margin-top: 40px;
+  }
+  
+  .about-icons .icon {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  
+  .about-icons .icon p {
+    margin: 0;
+  }
+
+/* Feedback  */
+.feedback-heading{
+    color: #000;
+}
+
+.Feedback-tip{
+    color: red;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-.about-content{
-    background-color: #00539CFF;
-    border-radius: 2vh;
-
-}
-
-.about-lines{
-    font-size: large;
-}
-
-.feature-heading{
-    font-size: 19px;
-}
+  
 
 /* Login Page */
 .modal-header {
