--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+body{
+    padding-top: 70px;
+}
+
 /* Navbar CSS */
 .container-fluid{
     padding: 0px;
@@ -78,29 +82,6 @@
     font-weight: 400;
   }
   
-  @media (max-width: 767.98px) {
-    .centered-items {
-      max-width: 90%;
-      text-align: center;
-    }
-    .text-end {
-      text-align: center !important;
-    }
-  }
-  
-  @media (min-width: 768px) and (max-width: 991.98px) {
-    .centered-items {
-      max-width: 75%;
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .centered-items {
-      max-width: 50%;
-      max-height: 50%;
-    }
-  }
-  
   .font-weight-bold {
     font-weight: bold;
   }
@@ -126,41 +107,8 @@
     margin: 0;
   }
   
-  
-/* Media Querie for Navbar */
-@media (max-width: 991px){
-    .nav-link{
-        padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
-        /* font-size: var(--bs-nav-link-font-size); */
-        font-size: large;
-        width: 100%;
-        text-align: left;
-        padding-left: 5px;
-    }
-
-    .nav-link:hover{
-        border-radius: 5px;
-    }
-
-    .nav-item .nav-link::after {
-        content: '';
-        position: absolute;
-        width: 0;
-        height: 3px;
-        background: black;
-        left: 0;
-        bottom: 0.4rem;
-        transition: width 0.9s ease;
-    }
-    
-    .nav-item .nav-link:hover::after {
-        width: 100%;
-    }
-
-}
 
 /* View marksheet css*/
-
 .view-body{
     color: #000;
     overflow-x: hidden;
@@ -406,4 +354,76 @@ background: #eee;
 
 .back-arrow:hover{
     cursor: pointer;
+}
+
+/* 
+   ------------------------------------------ 
+   ::::::::::::::::: Media Query :::::::::::: 
+   ------------------------------------------  
+*/
+
+@media (max-width: 991px){
+    body{
+        padding-top: 0px;
+    }
+}
+
+
+
+/* Media Query for Home page */
+
+@media (max-width: 767.98px) {
+    .centered-items {
+      max-width: 90%;
+      text-align: center;
+    }
+    .text-end {
+      text-align: center !important;
+    }
+  }
+  
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    .centered-items {
+      max-width: 75%;
+    }
+  }
+  
+  @media (min-width: 992px) {
+    .centered-items {
+      max-width: 50%;
+      max-height: 50%;
+    }
+  }
+
+
+/* Media Querie for Navbar */
+@media (max-width: 991px){
+    .nav-link{
+        padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
+        /* font-size: var(--bs-nav-link-font-size); */
+        font-size: large;
+        width: 100%;
+        text-align: left;
+        padding-left: 5px;
+    }
+
+    .nav-link:hover{
+        border-radius: 5px;
+    }
+
+    .nav-item .nav-link::after {
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 3px;
+        background: black;
+        left: 0;
+        bottom: 0.4rem;
+        transition: width 0.9s ease;
+    }
+    
+    .nav-item .nav-link:hover::after {
+        width: 100%;
+    }
+
 }
